# xouse

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: actions.rs  actions2.rs  config.rs  lua.rs  main.rs  mouser.rs  perform.rs  setup.rs  taskbar.rs
src/lib/: Binding.svelte  Config.svelte  DropDown.svelte  bindings.ts
