[package]
name = "xouse"
version = "0.1.0"
description = "A Tauri App"
authors = ["matsixfive"]
license = ""
repository = ""
default-run = "xouse"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
gilrs = { version = "0.10.4", features = ["xinput"], default-features = false }
tokio = "1.35.1"
anyhow = "1.0.79"
toml = "0.8.14"
rdev = { version = "0.5.3", features = ["serde", "serialize"] }
mlua = { version = "0.8.10", features = ["luajit", "vendored"] }
thiserror = "1.0.65"
log = "0.4.25"
tauri-plugin-log = "2"
env_logger = "0.10.2"
toml_edit = { version = "0.19.8", features = ["serde"] }

[dependencies.windows]
version = "0.52"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "UI", "UI_ViewManagement", "Win32_System", "Win32_System_Com"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
